--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1>Platform Technologies Index Test</h1>
        <a href="per_jero.html"> <button>Jero Escosio Website</button> </a>
        <a href="per_den_marc.html"> <button>Den Marc Siapno Website</button> </a>
-       <a href="per_Jerome_Orenza.html"> <button>Third Website</button> </a>
+       <a href="per_Jerome_Orenza.html"> <button>Jerome Orenza</button> </a>
        <a href="OOP-FINAL-PROJECT.html"> <button>Fourth Website</button> </a>
     </div>
 </body>
